Bug 429620 - Dolphin send several files to bluetooth devices sends only the first
Summary: Dolphin send several files to bluetooth devices sends only the first
Status: RESOLVED FIXED
Alias: None
Product: Bluedevil
Classification: Unmaintained
Component: libbluedevil (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
: 403450 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-25 05:26 UTC by Uwe Seidler
Modified: 2020-12-01 00:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.77
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Uwe Seidler 2020-11-25 05:26:57 UTC
SUMMARY
Select several files in Dolphin and send them to a bluetooth device.
Only the first file will be transfered

STEPS TO REPRODUCE
1. open Dolphin
2. select more then one file
3. Share > Send via Bluetooth 
4. Select Device
5. Start Transmission
6. One file will be sent

OBSERVED RESULT
One file is transmitted.

EXPECTED RESULT
All selected files shall be transmitted.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.71.0
Qt Version: 5.12.7
Dolphin: 20.04.2


ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2020-11-25 12:52:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/purpose/-/merge_requests/21
Comment 2 Nicolas Fella 2020-11-26 13:52:33 UTC
Git commit df7c04924c8e120a44929345afa4b7197545d74d by Nicolas Fella.
Committed on 25/11/2020 at 12:46.
Pushed by nicolasfella into branch 'master'.

[bluetooth] Fix sharing multiple files

bluedevil-sendfile expects "bluedevil-sendfile -f file1 -f file2", not
"bluedevil-sendfile -f file1 file2".

M  +13   -14   src/plugins/bluetooth/bluetoothplugin.cpp

https://invent.kde.org/frameworks/purpose/commit/df7c04924c8e120a44929345afa4b7197545d74d
Comment 3 Nicolas Fella 2020-12-01 00:23:20 UTC
*** Bug 403450 has been marked as a duplicate of this bug. ***