[bluetooth] Fix sharing multiple files

bluedevil-sendfile expects "bluedevil-sendfile -f file1 -f file2", not
"bluedevil-sendfile -f file1 file2".

BUG: 429620